Finish changes on SQL querys and Models

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -4,26 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/png" href="../icon-flat.png">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <title><%= title %></title>
   </head>
-  <body>
-    <main>
-      <section id="main__section">
+  <body class="bg-gray-800">
 
-        <div class="d-flex flex-row justify-content-center align-items-center">
-          <% for(let novels = 0 ; novels < data.length; novels++){%>
-            <div class="div__card d-flex w-58">
-                <div class="card__image">
-                  <img class="w-58" src=<%=data[novels].Image%> alt=<%=data[novels].Name%>>
+
+    <!-- Pequeno navbar con tailwindCss -->
+  <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 mb-4 shadow shadow-sm shadow-md rounded dark:bg-gray-800">
+    <div class="container flex flex-wrap justify-between items-center mx-auto">
+      <a href="/" class="flex items-center">
+        <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">FandomAnimes</span>
+      </a>
+      <div class="flex md:order-2">
+          <button type="button" class="text-white bg-yellow-300 hover:bg-yellow-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 text-black">
+            <a href="https://erickuu.github.io/" target="_blank" class="w-full h-full text-black">Erickuu Autor</a></button>
+      </div>
+      <div class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1" id="mobile-menu-4">
+        <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
+          <li>
+            <a href="/" class="block py-2 pr-4 pl-3 text-white bg-yellow-500 rounded md:bg-transparent md:text-yellow-500 md:p-0 dark:text-white" aria-current="page">Inicio</a>
+          </li>
+          <li>
+            <a href="https://FandomAnimes.blogspot.com" target="_blank" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-yellow-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Blog</a>
+          </li>
+          <li>
+            <a href="https://github.com/erickuu/" target="_blank" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-yellow-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Autor</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+<!-- Comienzo de la seccion Principal -->
+    <main>
+      <section id="" class="grid grid-cols-3 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 gap-5">
+
+          <% for(let novels = 0 ; novels < data.length; novels++){%>         
+          <!-- Renderizando card de la base de datos -->
+            <div class="section__card flex flex-row w-11/12 h-44 bg-gray-50 rounded">
+              <div class="card__img mr-3 w-2/5">
+                <img src="<%=data[novels].Image%>" class=" w-full h-full"  alt="">
+              </div>
+              <div class="card__info flex flex-col w-6/12 text-center pt-4">
+                <h1><strong><%=data[novels].Name%></strong></h1>
+                <p>Volumenes : <%=data[novels].Vols%></p>
+                <div class="w-full h-full mt-4">
+                  <a href="<%=data[novels].Link%>" target="_blank" class="w-full h-full p-2 rounded bg-yellow-300 hover:bg-yellow-700  font-medium">Descargar</a>
                 </div>
-                <div class="card__info">
-                  <h2><%=data[novels].Name%></h2>
-                  <p>Descriptio short</p>
-                </div>
+              </div>
             </div>
-          <%}%>        
-        </div>
+          <%}%> 
+
       </section>
     </main>
   </body>
