--- a/public/index.ejs
+++ b/public/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/png" href="../icon-flat.png">
+    <link rel="icon" type="image/png" href="/images/icon-flat.png">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <title><%= title %></title>
   </head>
@@ -39,7 +39,7 @@
 
 <!-- Comienzo de la seccion Principal -->
     <main>
-      <section id="" class="grid grid-cols-3 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 gap-5">
+      <section id="" class="grid grid-cols-2 gap-4">
 
           <% for(let novels = 0 ; novels < data.length; novels++){%>         
           <!-- Renderizando card de la base de datos -->
