--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,15 @@
-img{
-  width: 340px;
+/* Estilos para motores Webkit y blink (Chrome, Safari, Opera... )*/
+.card__info::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+/*Vertical align scrollbar*/
+/*.card__info::-webkit-scrollbar:vertical {
+    width:10px;
+}
+*/
+.card__info {
+    /*Estilos estándar experimentales (Principalmente Firefox)*/
+    scrollbar-color: rgba(0, 0, 0, .5) rgba(0, 0, 0, 0);
+    scrollbar-width: thin;
 }
