testing script tailwindcss

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" type="image/png" href="/images/icon-flat.png">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <title><%= title %></title>
@@ -101,5 +100,7 @@
 
     
     </main>
+    <!-- Tailwind loading after finish DOM loaded -->
+    <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
