Adding linter and small optmization on files js

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -65,7 +65,7 @@
           <p>Contactanos a traves de las siguientes redes sociales y cuentanos, ¿que novelas ligeras te gustaria ver en la plataforma?. Y recuerda : "Lo unico imposible es lo que no intestas"</p>
           <p><strong>Author : +573148121439</strong></p>
           <p>
-            <img src="public/images/hidden-flat.png" width="160px" class="" alt="">
+            <img src="/images/hidden-flat.png" width="160px" class="" alt="">
           </p>
         </div>
         <div class="w-full bg-yellow-300  flex  flex-col justify-center items-center  p-8 h-full">
