implementing tailwindcss and postcss

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/images/icon-flat.png">
-    <link rel='stylesheet' href='/stylesheets/main.css' />
+    <link rel='stylesheet' href='/stylesheets/main.bundle.css'/>
     <title><%= title %></title>
   </head>
 
@@ -107,6 +107,5 @@
     
     </main>
     <!-- Tailwind loading after finish DOM loaded -->
-    <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
