--- a/public/views/notFound.ejs
+++ b/public/views/notFound.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <script src="https://cdn.tailwindcss.com"></script>
+	<link rel="stylesheet" href="../stylesheets/main.bundle.css">
 	<title>Error 404</title>
 </head>
 <body class="bg-no-repeat bg-fixed bg-cover" style="background-image: url('https://i.imgur.com/6bv85zs.jpg');">
