--- a/public/views/lightNovels.ejs
+++ b/public/views/lightNovels.ejs
@@ -6,29 +6,34 @@
   <link rel="stylesheet" href="../stylesheets/main.bundle.css">
 	<title><%=title%></title>
 </head>
-<body class="bg-yellow-300">
+<body class="bg-black">
 <main>	
   <!-- Section about novels and downloads -->
   <section id="" class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4 mt-20">
       <% for(let novels = 0 ; novels < data.length; novels++){%>         
       <!-- Card ITEMS -->
-        <div class="section__card flex flex-col w-full h-96 bg-gray-50 rounded-2xl">
+        <div class="section__card flex flex-col w-full bg-white h-auto rounded-2xl">
           <!-- Card IMAGES -->
           <div class="card__img mr-3 w-full">
-            <img src="<%=data[novels].Image%>" class="w-64 h-auto"  alt="">
+            <img src="<%=data[novels].Image%>" class="w-full h-auto rounded"  alt="">
           </div>
           <!-- CARD INFORMATION -->
           <div class="card__info flex flex-col w-full h-full text-left pt-2 px-3 overflow-x-hidden overflow-y-auto">
             <h1><strong><%=data[novels].Name%></strong></h1>
             <p>Volumenes : <%=data[novels].Vols%></p>
             <p><span> <%=data[novels].Tag%></span></p>
-            <div class="w-full h-full mt-4">
-              <a href="<%=data[novels].Link%>" target="_blank" class="w-full h-full p-2 rounded bg-yellow-300 hover:bg-yellow-700  font-medium">Descargar</a>
+            <div class="w-full h-full mt-4 mb-3 flex flex-row">
+              <a href="<%=data[novels].Link%>" target="_blank" class=" h-20 px-2 pt-4  bg-yellow-300 hover:bg-yellow-700 mr-3 font-medium">Descargar +</a>
+              <a href="<%=data[novels].LinkTwo%>" target="_blank" class=" h-20 px-2 pt-4  bg-green-300 hover:bg-green-500 mr-3  font-medium">Descargar +</a>
             </div>
           </div>
         </div>
       <%}%> 
   </section>
+   <div class="w-full h-auto flex flex-col justify-center items-center">
+      <img src="../images/fox-flat.png"  alt="fox">
+      <h1 class="text-3xl text-white font-semibold">FandomAnimes Community</h1>
+  </div>
 </main>
 </body>
 </html>
