--- a/public/index.ejs
+++ b/public/index.ejs
@@ -8,14 +8,14 @@
     <title><%= title %></title>
   </head>
 
-  <body class="bg-black">
+  <body class="bg-gray-900">
 <!-- class="bg-yellow-300" -->
     <!-- Pequeno navbar con tailwindCss -->
  
-<nav class="bg-black px-2 sm:px-4 py-2.5 shadow shadow-sm shadow-md ">
+<nav class="bg-white px-2 sm:px-4 py-2.5 ">
     <div class="container flex flex-wrap justify-between items-center mx-auto">
       <a href="/" class="flex items-center">
-        <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"><img src="/images/icon-flat.png" width="70px" alt=""></span>
+        <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"><img data-src="/images/icon-flat.png" class="img" width="70px" alt=""></span>
       </a>
       <div class="flex md:order-2">
           <button type="button" class="text-white bg-yellow-300  hover:bg-gray-500 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 text-black">
@@ -24,38 +24,50 @@
       <div class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1" id="mobile-menu-4">
         <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
           <li>
-            <a href="/" class="block py-2 pr-4 pl-3 rounded text-yellow-300 md:p-0  hover:text-gray-500" aria-current="page">Inicio</a>
+            <a href="/" class="block py-2 pr-4 pl-3 rounded text-yellow-500 md:p-0  hover:text-gray-500" aria-current="page">Inicio</a>
           </li>
           <li>
-            <a href="https://FandomAnimes.blogspot.com" target="_blank" class="block py-2 pr-4 pl-3 text-yellow-300  md:border-0  md:p-0 hover:text-gray-500">Blog</a>
+            <a href="https://FandomAnimes.blogspot.com" target="_blank" class="block py-2 pr-4 pl-3 text-yellow-500  md:border-0  md:p-0 hover:text-gray-500">Blog</a>
           </li>
           <li>
-            <a href="https://github.com/erickuu/" target="_blank" class="block py-2 pr-4 pl-3 text-yellow-300 md:p-0 hover:text-gray-500 ">Github and Project</a>
+            <a href="https://github.com/erickuu/" target="_blank" class="block py-2 pr-4 pl-3 text-yellow-500 md:p-0 hover:text-gray-500 ">Github and Project</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
+ 
 
 <!-- Comienzo de la seccion Principal -->
     <main>
+
       <!-- Section about welcome -->
-      <section class="main__section-welcome w-full h-screen flex flex-row items-center mt-20 justify-center ">
-          <div class="section__content-card w-3/5 h-3/5 mx-auto bg-white shadow px-11 pt-10 relative rounded-2xl text-lg ">
-            <h1 class="text-3xl text-center mb-6"><strong>FandomAnime Community</strong></h1>
-            <h2 class="text-3xl text-center"><strong>¿Quienes somos?</strong></h2>
-              <p class="leading-8">Somos una comunidad 🌎, somos personas diferentes al resto, nos une la pasion de la lectura, sin embargo estamos abiertos a todo tipo de contenido que sea de interes.</p>
-            <h2 class="text-3xl text-center"><strong>¿Traducimos novelas?</strong></h2>
-              <p class="leading-9">En fandomAnimes, nos dedicamos a entregar contenido, siempre en espanol, sin embargo su traduccion es hecha por personas externas.</p>
-            <h2 class="text-3xl text-center"><strong>¿Que tipo de novelas?</strong></h2>
-              <p class="leading-8">De todo tipo mas que nada novelas ligeras y para todo publico en especial nos gustan los generos de : fantasia,romance,accion,aventura,drama, y muchos otros ... 💛📚 </p>
-            <div class="-top-24 right-0 absolute">
-              <img src="images/fox-flat.png" width="200px"  alt="fox">
+      <section class="w-full h-screen grid grid-cols-2 ">
+          <div class="w-2/4 h-full text-base p-8 relative ">
+            <div class="text-left bg-red-500">
+             <div>
+                <h2 class="font-medium text-3xl">Fandom Animes</h2>
+                <p>Pequña comunidad de personas apasionadas por el mundo anime, novelezco y geek.</p>
+                <p>Nos encargamos de dsitribuir contenido original de manera gratuita, nos encanta entre otras cosas las tecnologias de informacion y las ciencias computacionales.</p>
+                <p>No traducimos novelas ni mucho menos somo creadores de las mismas, cualquier duda o queja abajo puedes encontrar la caja de informacion de contacto .</p>
+                <p> </p>
+             </div>
+             <div class="mt-4"> 
+              <h2 class="">Express and NodeJS</h2>
+              <p>Esta app es powered by : Express and NodeJs.></p>
+              <p>No menos importante : Mysql ,SQL ,JS</p>
+              <p>Pero lo mas importante es el amor de nuestros desarrolladores en esta App, disfrutalo .</p>
+              <p>"-<strong> Soñar es tan facil, es gratis </strong>."</p>
+             </div>
             </div>
-            <div class="absolute left-0 -top-72">
-              <img src="images/nora-flat.png" width="200px"  alt="zero darling in the friendxx">
-            </div>
+          </div>
+          <div class="flex flex-col justify-center items-center">
+            <img data-src="images/fox-flat.png"  width="300px" class="img"  alt="fox">
+             <div class="flex">
+              <img data-src="images/nodejs-flat.png"  width="150" class="img mr-3"  alt="nodejs">
+              <img data-src="images/mysql-flat.png"  width="150" class="img mr-3"  alt="mysql">
+              <img data-src="images/javascript-flat.png"  width="150" class="img mr-3"  alt="javascript">
+             </div>
           </div>
       </section>
       <!-- Section Information about site -->
@@ -65,18 +77,18 @@
           <p>Contactanos a traves de las siguientes redes sociales y cuentanos, ¿que novelas ligeras te gustaria ver en la plataforma?. Y recuerda : "Lo unico imposible es lo que no intestas"</p>
           <p><strong>Author : +573148121439</strong></p>
           <p>
-            <img src="./images/hidden-flat.png" width="160px" class="" alt="">
+            <img data-src="./images/hidden-flat.png" width="160px" class="img" alt="Hidden-flat.png">
           </p>
           
         </div>
-        <div class="w-full flex flex-col justify-center items-center text-white p-8 h-full">
+        <div class="w-full flex flex-col justify-center items-center text-black bg-yellow-300 p-8 h-full">
           <h2 class="text-center text-3xl mb-4"><strong>Redes Sociales</strong></h2>
           <p><strong>Instagram</strong>:@fandomanimes1</p>
           <p><strong>Blogspot</strong> :fandomanimes.blogspot.com</p>
           <p><strong>Wordpress</strong>:fandomanimes.wordpress.com</p>
           <p><strong>Email</strong>    :erickgraterolbarico@gmail.com </p>
           <div class="button mt-20 w-full flex justify-center ">
-            <button type="button" class="bg-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center  text-black">
+            <button type="button" class="bg-white font-medium rounded-lg text-sm px-5 py-2.5 text-center  text-black">
               <a href="/light-novels" class="w-full h-full text-black">Descargar Novelas
               </a>
             </button>
@@ -86,5 +98,8 @@
       </section>
     
     </main>
+    <script src="javascripts/lazy-loading.js">
+      
+    </script>
   </body>
 </html>
