--- a/public/index.ejs
+++ b/public/index.ejs
@@ -43,32 +43,32 @@
 
       <!-- Section about welcome -->
       <section class="w-full h-screen grid grid-cols-2 ">
-          <div class="w-2/4 h-full text-base p-8 relative ">
-            <div class="text-left bg-red-500">
-             <div>
+         
+          <div class="w-2/4 h-full text-base p-8 ">
+            <div class=" h-full w-full grid-row-2 pt-10">
+             <div class="px-5 text-left">
                 <h2 class="font-medium text-3xl">Fandom Animes</h2>
-                <p>Pequña comunidad de personas apasionadas por el mundo anime, novelezco y geek.</p>
+                <p>"-<strong> Soñar es tan facil, es gratis </strong>."</p>
+                <p>Pequeña comunidad de personas apasionadas por el mundo anime, novelezco y geek.</p>
                 <p>Nos encargamos de dsitribuir contenido original de manera gratuita, nos encanta entre otras cosas las tecnologias de informacion y las ciencias computacionales.</p>
-                <p>No traducimos novelas ni mucho menos somo creadores de las mismas, cualquier duda o queja abajo puedes encontrar la caja de informacion de contacto .</p>
-                <p> </p>
              </div>
-             <div class="mt-4"> 
-              <h2 class="">Express and NodeJS</h2>
-              <p>Esta app es powered by : Express and NodeJs.></p>
-              <p>No menos importante : Mysql ,SQL ,JS</p>
-              <p>Pero lo mas importante es el amor de nuestros desarrolladores en esta App, disfrutalo .</p>
-              <p>"-<strong> Soñar es tan facil, es gratis </strong>."</p>
+             <div class="text-right px-5 pt-4"> 
+              <h2 class=""><strong>Express JS</strong></h2>
+              <p> Express,Ejs y NodeJs.</p>
+              <p> MYSQL Drivers, SQL .</p> 
+              <div class="flex mt-6">
+                <img data-src="images/nodejs-flat.png"  width="50" class="img mr-3"  alt="nodejs">
+                <img data-src="images/sql-flat.png"  width="50" class="img mr-3"  alt="mysql">
+                <img data-src="images/javascript-flat.png"  width="50" class="img mr-3"  alt="javascript">
+                <img data-src="images/json-flat.png"  width="50" class="img mr-3"  alt="javascript">
+               </div>             
              </div>
             </div>
-          </div>
-          <div class="flex flex-col justify-center items-center">
-            <img data-src="images/fox-flat.png"  width="300px" class="img"  alt="fox">
-             <div class="flex">
-              <img data-src="images/nodejs-flat.png"  width="150" class="img mr-3"  alt="nodejs">
-              <img data-src="images/mysql-flat.png"  width="150" class="img mr-3"  alt="mysql">
-              <img data-src="images/javascript-flat.png"  width="150" class="img mr-3"  alt="javascript">
-             </div>
-          </div>
+            </div>
+           
+            <div class="w-full h-full  flex items-center justify-center pt-10">
+                <img data-src="images/titan-flat.png"  width="630px" class="img"  alt="fox">  
+            </div>
       </section>
       <!-- Section Information about site -->
        <section class="w-full h-screen grid grid-cols-2 text-lg ">
