--- a/public/views/lightNovels.ejs
+++ b/public/views/lightNovels.ejs
@@ -36,9 +36,9 @@
         </div>
       <%}%> 
   </section>
-  <footer class="grid grid-cols-2 gap-2 bg-white mt-6 border border-black ">
+  <footer class="grid grid-cols-2 gap-2 bg-white mt-20 border border-black ">
      <div class="w-full h-auto flex flex-col justify-center items-center p-10">
-        <img src="../images/fox-flat.png"  alt="fox">
+        <img src="../images/fox-flat.png" width="200px"  alt="fox">
     </div>
     <div class="p-10 w-full flex flex-col justify-center items-center text-center">
         <h1 class="text-3xl  font-semibold">FandomAnimes Community</h1>
